# wgs-all

./: .dockerignore  .env.example  .gitignore  README.md  README_CN.md  README_EN.md  pyproject.toml  requirements.txt  wgs-intro.html
.kiro/skills/wgs-platform/: SKILL.md
app/: __init__.py  __main__.py  cli.py  main.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  bam_detector.py  config.py  logging.py  reference.py  resource_planner.py
app/models/: __init__.py  job.py
app/pipeline/: __init__.py  alignment.py  calculator.py  eigenstrat.py  extraction.py  full_pipeline.py  g25.py  haplogroup.py  pca.py  population.py  qpadm.py  report.py  snp_extraction.py  vcf_extraction.py
app/utils/: __init__.py
app/worker/: __init__.py
docker/alignment/: Dockerfile  align.sh  build.sh
docker/eigenstrat/: Dockerfile  align-hg19.sh  align-t2t.sh  build.sh  build_bg.sh  entrypoint.sh  export_bg.sh
docs/: credits.md  learning_notes.md  project_review.md  reference_structure.md  user-manual.md  wgs_all_docker_guide.md
scripts/: batch_align.sh  liftover_aadr_snp_to_hg38.py  preflight_check.sh  reorganize_reference.sh
static/: index.html  landing.html
tests/: conftest.py  make_test_bam.py  test_reference.py
